css/main.css
/* ... */
@media (min-width: 425px) and (max-width: 767px) {
  .enterprise-features{
    margin-left: 130px;
  }
  .plan-section{
    margin-top: 20px;
  }
  .client-sign {
    margin-top: 60px;
  }
  .last-sign{
    margin-top: 30px;
  }
  .press-heading{
    margin-left: 0px;
  }
  .press-title{
    color: #ef5245;
    font-size: 13px;
    font-family: neosans;
  }
  .press-desc{
    color: #000000;
    font-size: 13px;
    font-family: gillsans;
  }
  .press-content{
    margin-top: 10px;
    margin-left: 0px;
  }
  .section-collapse{
    width: 100%;
    margin-bottom: 10px;
  }
  .press-collapse{
    width: 90%;
    margin-bottom: 10px;
  }
  .press-logo{
    width:70px;
    height: 70px;
    margin-left: 20px;
  }
  .navbar-years{
    margin-left: 80px;
  }
  .toggleNew {
    margin-top: 29px!important;
  }
  .mentions-text {
    text-align: center!important;
    margin-left: 0px;
  }
  .press-mention{
    margin-left: 0px;
  }
  .request-menu{
  display: none;
  }
  .testimonial-section{
    height: 400px;
  }
  .user-comments{
    max-width: 400px;
    font-size: 1em;
  }
  .client-logo{
    width: 100%;
  }
  .client-name{
    left: 90px;
    top:160px;
    margin-top: 30px;
  }
  .last-client{
    margin-top: 90px;
    left: 90px;
  }
  .logo-pos{
    margin-top: 10px;
  }
  .pricing-testLogo{
    margin-top: 50px;
  }
  .content-container{
    margin-top: 0px;
  }
  .year-menu li{
    margin-top: -15px;
    display: inline-block;
  }
  .year-menu li a{
    line-height: 10px;
  }
  .year-selector{
    margin-left: -20px;
    margin-top: 5px;
    font-size: 13px;
    padding-left: 0px;
  }
  .current-year{
    height: 30px;
  }
  .arrow-left{
    bottom:20px;
  }
  .year-menu li a:hover{
  background-color: #fafafa;
  }
  .main-nav-scrolled {
    width: 90%!important;
    top: 39px;
    margin-left: 0px;
  }
  .year-menu{
    margin-left: 0px!important;
    width: 350px;
    font-size: 13px;
    margin-top: 20px;
    height: 42px;
    line-height: 30px;
  }
  .left-error-content{
    margin-left: 0px;
  }
  .or-heading{
    margin-top: 30px;
  }
  .blog-box-top{
    margin-top: 20px;
  }
  .blog-box-down{
    margin-top: 20px;
  }
  .error-right-heading{
    margin-top: 30px;
  }
  .reduced-image{
    width: 50%;
  }
  .grader-logo img {
    position: relative;
    top: 0px;
  }
  .try-now-button{
    left: 0px;
  }
  .ak-appgrader-green-dark {
    text-align: center;
  }
  .ak-appgrader-green-dark {
    text-align: center;
  }
  #home-video-zone {
    margin: auto;
  }
  .level-section{
    margin-top: 10px;
    margin-bottom: 0px;

  }
  .level-container {
    padding-bottom: 0px;
    margin-left: 10px;
    margin-right: 10px;
  }
  .level-images {
    display: none;
  }
  .why-appknox {
   padding-top: 0px;
  }
  .image-container {
    height: 300px
  }
  .pull-down-side {
    top : -60px
  }
  .image-container img {
    margin-top: 30px;
    margin-bottom: 30px
  }
  #ak-radar-zone {
    margin-top: 0px
  }
  #ak-cellphone-14 {
    margin: auto;
    right: 140px;
  }
  #radar-img-zone {
    margin-bottom: 60px;
    margin-left: 60px;
  }
  .button-container {
    margin: 0 auto;
    text-align: center;
  }
  .call-button {
    margin-left: 0;
  }
  #head-txt-14  {
    text-align: center;
  }
  .radar-animate {
    text-align: center;
  }
  .radar-desc {
    text-align: center;
  }
  .footer-box {
    margin-left: -20px;
    padding-right: 0px;
    padding-left: 10px;
    margin-right: -20px;
  }
  .subscribe-button {
    width: 150px;
    display: block!important;
    margin: 20px auto;
  }
  .update-text {
    margin-top: 20px;
    text-align: center;
  }
  .footer-nav {
    margin-left: 5%;
  }
  .footer-nav>li {
    display: inline-block;
  }
}
/* ... */

